# Ex02

./: .gitignore  CMakeLists.txt  test_lab1.cpp
ext/gtest-1.8.0/: CMakeLists.txt
include/: main1.cpp  task1.cpp  task1.h  task1.h.gch  task1.hpp
src/: a.out  main.cpp  main1.cpp  taks1.cpp  task1.cpp  task1.h  test_lab1.cpp
test/: test_lab1.cpp  test_main.cpp
